// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries should recive all users 1`] = `
Object {
  "address": Object {
    "buildingNumber": "23",
    "city": "Kiev",
    "country": "Ukraine",
    "street": "Shevchenka",
  },
  "comments": Array [],
  "email": "f5dbb1b21@gmail.com",
  "firstName": "Test",
  "lastName": "User",
  "orders": Array [],
  "phoneNumber": "380666666666",
  "role": "user",
  "wishlist": Array [],
}
`;

exports[`queries should recive user by token 1`] = `
Object {
  "__typename": "User",
  "address": Object {
    "__typename": "Address",
    "buildingNumber": "23",
    "city": "Kiev",
    "country": "Ukraine",
    "street": "Shevchenka",
  },
  "comments": Array [],
  "email": "test.email@gmail.com",
  "firstName": "Test",
  "lastName": "User",
  "orders": Array [],
  "phoneNumber": "380666666666",
  "role": "user",
  "wishlist": Array [],
}
`;
